Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  type: ClusterIP
  selector:
    app: nodeapp
  ports:
    - port: 80
      targetPort: 3000
